# devirt

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: renovate.json5
.github/workflows/: ci.yml  verify.yml
benches/: dispatch.rs
benchmarks/: README.md
benchmarks/tantivy-devirt/: Cargo.toml
benchmarks/tantivy-devirt/benches/: scorer.rs
benchmarks/tantivy-devirt/src/: lib.rs
benchmarks/tracing-devirt/: Cargo.toml
benchmarks/tracing-devirt/benches/: subscriber.rs
benchmarks/tracing/tracing/: Cargo.toml
benchmarks/tracing/tracing-core/: Cargo.toml
benchmarks/tracing/tracing-core/src/: bench_subscriber.rs  lib.rs  subscriber.rs
benchmarks/tracing/tracing/benches/: devirt_event.rs  shared.rs
crates/core/: Cargo.toml
crates/core/benches/: dispatch.rs
crates/core/examples/: shapes.rs
crates/core/src/: lib.rs
crates/core/tests/: equivalence.rs  kani.rs  ui.rs  ui_attr.rs
crates/core/tests/ui/: all_arms.rs  method_attrs.rs  missing_method.rs  missing_method.stderr  multi_arg.rs  multi_hot.rs  pub_trait.rs  single_hot.rs  unsafe_trait.rs  wrong_signature.rs  wrong_signature.stderr
crates/core/tests/ui_attr/: attr_all_arms.rs  attr_args_on_impl.rs  attr_args_on_impl.stderr  attr_assoc_default.rs  attr_assoc_type.rs  attr_default_body.rs  attr_default_override.rs  attr_default_send.rs  attr_dyn_send.rs  attr_generic_impl.rs  attr_generic_trait.rs  attr_method_attrs.rs  attr_method_lifetimes.rs  attr_missing_args.rs  attr_missing_args.stderr  attr_multi_hot.rs  attr_must_use.rs  attr_must_use_unused.rs  attr_must_use_unused.stderr  attr_on_struct.rs  attr_on_struct.stderr  attr_single_hot.rs  attr_supertraits.rs  attr_unsafe_fn.rs  attr_unsafe_missing_on_impl.rs  attr_unsafe_missing_on_impl.stderr  attr_unsafe_trait.rs  attr_where_clause.rs  attr_where_impl.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/verify/: Cargo.toml
crates/verify/src/: lib.rs
docs/plans/: 2026-02-28-formal-verification-design.md  2026-02-28-fuzz-testing-design.md  2026-02-28-fuzz-testing-plan.md
examples/: shapes.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dispatch.rs
tests/: ui.rs
tests/ui/: all_arms.rs  missing_method.rs  multi_hot.rs  single_hot.rs  wrong_signature.stderr
