[package]
name = "devirt-fuzz"
version = "0.0.0"
publish = false
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys.workspace = true
arbitrary.workspace = true
devirt.workspace = true

[[bin]]
name = "dispatch"
path = "fuzz_targets/dispatch.rs"
doc = false

[lints]
workspace = true
