[package]
name = "tracing-devirt-bench"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
devirt = { path = "../../crates/core" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "subscriber"
harness = false

[profile.bench]
lto = "thin"
codegen-units = 1
