[package]
name = "devirt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Transparent devirtualization for Rust trait objects via vtable-pointer comparison"
keywords = ["devirtualization", "vtable", "no-std", "dispatch", "performance"]
categories = ["no-std", "rust-patterns"]

[dependencies]
paste.workspace = true
devirt-macros = { path = "../macros", optional = true }

[features]
default = ["macros"]
macros = ["dep:devirt-macros"]

[dev-dependencies]
criterion.workspace = true
trybuild.workspace = true

[[test]]
name = "ui_attr"
required-features = ["macros"]

[[bench]]
name = "dispatch"
harness = false

[lints]
workspace = true
